authentik/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: authentik-server
  template:
    metadata:
      labels:
        app: authentik-server
        app.kubernetes.io/component: server
        app.kubernetes.io/name: authentik
    spec:
      containers:
        - name: authentik
          image: ghcr.io/goauthentik/server:latest
          args:
            - server
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /media
              name: authentik-storage
              subPath: media
            - mountPath: /templates
              name: authentik-storage
              subPath: templates
      volumes:
        - name: authentik-storage
          persistentVolumeClaim:
            claimName: authentik-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
    spec:
      containers:
        - name: authentik
          image: ghcr.io/goauthentik/server:latest
          args:
            - worker
          volumeMounts:
            - mountPath: /media
              name: authentik-storage
              subPath: media
            - mountPath: /templates
              name: authentik-storage
              subPath: templates
            - mountPath: /certs
              name: authentik-storage
              subPath: certs
      volumes:
        - name: authentik-storage
          persistentVolumeClaim:
            claimName: authentik-pvc
