authentik/service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentik-service
spec:
  externalTrafficPolicy: Local
  internalTrafficPolicy: Local
  selector:
    app: authentik-server
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
